--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -7,7 +7,8 @@ Globals:
     Timeout: 30
     MemorySize: 512
     Runtime: python3.12
-    Architecture: arm64
+    Architectures:
+      - arm64
 
 Resources:
   ApiFunction:
