--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -44,8 +44,10 @@ jobs:
           cd frontend
           aws s3 sync dist/ s3://${{ secrets.S3_BUCKET }}/ --delete
 
-      - name: Invalidate CloudFront
+      - name: Invalidate CloudFront Cache
+        if: secrets.CLOUDFRONT_DISTRIBUTION_ID != ''
         run: |
           aws cloudfront create-invalidation \
             --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} \
             --paths "/*"
+        continue-on-error: true
