Fix front end validation

--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -45,7 +45,7 @@ jobs:
           aws s3 sync dist/ s3://${{ secrets.S3_BUCKET }}/ --delete
 
       - name: Invalidate CloudFront Cache
-        if: secrets.CLOUDFRONT_DISTRIBUTION_ID != ''
+        if: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID != '' }}
         run: |
           aws cloudfront create-invalidation \
             --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} \
