--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.6.0",
+    "zustand": "^5.0.4",
+    "axios": "^1.7.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
