--- a/.gitignore
+++ b/.gitignore
@@ -17,12 +17,14 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
 parts/
 sdist/
 var/
 wheels/
+# Python lib directories (but not frontend/src/lib)
+backend/lib/
+*.egg-info/lib/
 *.egg-info/
 .installed.cfg
 *.egg
