feat: Add Twitter (X) video posting integration with OAuth 2.0 and chunked media upload
Implemented complete Twitter/X integration following the same architectural patterns
as Facebook and Instagram, enabling users to connect Twitter accounts and post videos.

## New Features

### Twitter Posting Service (twitter_posting.py)
- Chunked video upload using Twitter API v1.1
  - INIT: Initialize upload session
  - APPEND: Upload video in 5MB chunks
  - FINALIZE: Complete upload with media processing
- Tweet creation with media using Twitter API v2
- Video processing status monitoring
- Support for videos up to 512MB

### OAuth 2.0 with PKCE
- Twitter OAuth provider already implemented in oauth_providers.py
- TwitterTokenExchange for code-to-token exchange
- User profile fetching via /2/users/me endpoint
- Direct account saving (no page selection like Facebook)
- Refresh token support for token renewal

### Worker Integration
- Added process_twitter_post() function in posting_worker.py
- Integrated Twitter routing in SQS handler
- Follows same pattern as Facebook/Instagram processing
- Detailed logging for debugging

### API Integration
- Twitter callback handler in main.py
- OAuth state management
- User info fetching and account creation
- Environment variable configuration

## Configuration

### SSM Parameters
- Created /toallcreation/twitter/client_id (placeholder)
- Created /toallcreation/twitter/client_secret (placeholder)
- Added to both ApiFunction and PostingWorkerFunction

### CloudFormation Template
- Added TWITTER_CLIENT_ID environment variable
- Added TWITTER_CLIENT_SECRET environment variable
- Applied to both Lambda functions

## API Endpoints Used

**v1.1 Media Upload** (upload.twitter.com):
- POST /1.1/media/upload.json?command=INIT
- POST /1.1/media/upload.json?command=APPEND
- POST /1.1/media/upload.json?command=FINALIZE
- GET /1.1/media/upload.json?command=STATUS

**v2 API** (api.twitter.com):
- POST /2/oauth2/token (token exchange)
- GET /2/users/me (

--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -209,6 +209,8 @@ Resources:
           # Social Media OAuth Credentials
           FACEBOOK_CLIENT_ID: '{{resolve:ssm:/toallcreation/facebook/client_id}}'
           FACEBOOK_CLIENT_SECRET: '{{resolve:ssm:/toallcreation/facebook/client_secret}}'
+          TWITTER_CLIENT_ID: '{{resolve:ssm:/toallcreation/twitter/client_id}}'
+          TWITTER_CLIENT_SECRET: '{{resolve:ssm:/toallcreation/twitter/client_secret}}'
       Policies:
         - DynamoDBCrudPolicy:
             TableName: !Ref SocialAccountsTable
@@ -260,6 +262,8 @@ Resources:
           VIDEO_UPLOAD_BUCKET: !Ref VideoUploadBucket
           FACEBOOK_CLIENT_ID: '{{resolve:ssm:/toallcreation/facebook/client_id}}'
           FACEBOOK_CLIENT_SECRET: '{{resolve:ssm:/toallcreation/facebook/client_secret}}'
+          TWITTER_CLIENT_ID: '{{resolve:ssm:/toallcreation/twitter/client_id}}'
+          TWITTER_CLIENT_SECRET: '{{resolve:ssm:/toallcreation/twitter/client_secret}}'
       Policies:
         - DynamoDBCrudPolicy:
             TableName: !Ref SocialAccountsTable
