--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,4 @@ coordination/orchestration/*
 claude-flow
 # Removed Windows wrapper files per user request
 hive-mind-prompt-*.txt
+docs/security.md
